view/frontend/web/css/source/components/_gallery.less
& when (@media-common = true) {
& when (@critical = unsure), (@critical) {
    .breeze-gallery {
        display: flex;
        flex-direction: column;

        .prev,
        .next,
        .controls a,
        .close,
        .slick-arrow {
            color: @bz-gallery-controls__color;
            &:hover {
                color: @bz-gallery-controls__hover__color;
            }
            svg {
                width: 24px;
                height: 24px;
                vertical-align: top;
            }
        }

        .prev,
        .next,
        .close,
        .controls {
            position: absolute;
            z-index: 20;
        }

        .controls {
            visibility: hidden;
            .left(3px);
            top: 3px;
            display: flex;
            flex-direction: column;
            gap: 3px;
            a {
                display: flex;
                align-items: center;
                justify-content: center;
                width: 45px;
                height: 45px;
                background: #fff;
            }
        }
        .video .controls {
            display: none;
        }

        .close {
            display: none;
        }

        .prev,
        .next {
            display: flex;
        }
        .prev,
        .next,
        .slick-arrow {
            align-items: center;
            justify-content: center;
            .left(@bz-gallery-arrow__left);
            top: @bz-gallery-arrow__top;
            width: @bz-gallery-arrow__width;
            height: @bz-gallery-arrow__height;
            .lib-css(color, @bz-gallery-arrow__color);
            .lib-css(background, @bz-gallery-arrow__background);
            .lib-css(border, @bz-gallery-arrow__border);
            .lib-css(border-radius, @bz-gallery-arrow__border-radius);
            z-index: 11;
            transition: all 150ms ease-in;
            transform: ~"translateY(-50%)";

            svg {
                .modrtl(transform, false, ~"scaleX(-1)");
            }
        }
        .prev,
        .next,
        .images .slick-arrow {
            @media (hover: hover) {
                visibility: hidden;
                opacity: 0;
                &:hover {
                    opacity: 1;
                    .lib-css(color, @bz-gallery-arrow__hover__color);
                }
            }
        }
        .next,
        .slick-next {
            .left(auto);
            .right(@bz-gallery-arrow__left);
        }
        @media (hover: hover) {
            .stage:hover .prev,
            .stage:hover .next,
            .images:hover .slick-arrow {
                visibility: visible;
                opacity: .8;
            }
        }

        img {
            vertical-align: top;
            height: auto;
            max-height: none;
        }

        .item {
            position: relative;
            flex-shrink: 0;
        }

        .images .item.video,
        .stage.video .main-image-wrapper,
        .thumbnails:not(.dots) .item.video {
            &::before {
                content: '';
                z-index: 10;
                position: absolute;
                pointer-events: none;
                left: 50%;
                top: 50%;
                border: 10px solid transparent;
                border-left: 16px solid #fff;
                margin-top: -10px;
                margin-left: -8px;
                filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));
                transition: transform 100ms ease-in-out;
            }
        }

        .stage {
            display: flex;
            justify-content: center;
            align-items: center;
            position: relative;
            overflow: visible !important; // override panzoom inline styles

            > div:first-child,
            .main-image-wrapper,
            .main-image-wrapper > picture {
                position: relative;
                cursor: zoom-in;
                display: flex;
                width: 100%;
                justify-content: center;
                align-items: flex-start;
            }
        }

        .video-wrapper {
            display: flex;
            cursor: default !important;
            position: absolute !important;
            z-index: 10;
            top: 0;
            right: 0;
            left: 0;
            bottom: 0;
            align-items: center !important;
            + * {
                // do not hide this element to keep frame size.
                opacity: 0;
            }
        }

        .images .item.video,
        .stage.video .main-image-wrapper {
            cursor: pointer;
            &::before {
                transform: scale(1.3);
                pointer-events: all;
            }
            &:hover::before {
                transform: scale(1.3) translateX(2px);
            }
        }

        .thumbnails {
            display: flex;
            flex-direction: var(--gallery-thumbs-direction, row);
            flex-grow: 0;
            flex-shrink: 0;
            gap: @bz-gallery-thumb__gap;
            .margin(@bz-gallery-thumb__margin);
            overflow: auto;
            scroll-behavior: smooth;
            .bz-scrollbar();

            & when (@bz-gallery-thumb__wrap) {
                flex-wrap: wrap;
            }

            & when not (@bz-gallery-thumb__wrap) {
                padding-bottom: 12px;
            }

            &.hidden {
                display: none;
            }

            img {
                filter: contrast(95%);
            }

            .item {
                background: #f4f4f4;
                &:focus {
                    outline: none;
                }
                &::after {
                    content: '';
                    position: absolute;
                    pointer-events: none;
                    inset: 0;
                }
                &.active::after {
                    .lib-css(box-shadow, @bz-gallery-thumb-item__active__box-shadow);
                }
            }
        }

        &:not(.opened) .thumbnails.dots {
            .bz-gallery-nav-dots();
        }

        // expanded mode (all images at once, not thumbnails)
        &.expanded {
            &:not(.opened) {
                .stage,
                .thumbnails {
                    display: none;
                }
            }
            &.opened .images {
                display: none;
            }
        }
        .images {
            --gallery-columns-count: @bz-gallery-expanded__columns-count;
            --gallery-columns-gap: @bz-gallery-expanded__gap;
            display: flex;
            position: relative;
            gap: var(--gallery-columns-gap);
            overflow: auto;
            scroll-snap-type: x mandatory;
            scroll-snap-stop: always;
            .item {
                max-width: 100%;
                scroll-snap-align: center;
                text-align: center;
                cursor: zoom-in;
            }
        }

        &.slider {
            .action.skip {
                display: none;
            }

            .images {
                flex-wrap: nowrap !important;
                overflow: auto !important;
                scrollbar-width: none;

                &.slick-initialized:has(:focus-visible) {
                    overflow: visible !important;
                }

                .slick-list {
                    gap: var(--gallery-columns-gap);
                    &:focus-visible {
                        outline-offset: 0;
                    }
                }
                .slick-arrow {
                    z-index: 110;
                }
            }

            .thumbnails{
                &:not(.hidden) {
                    display: flex !important;
                    scrollbar-width: none;
                    position: relative;
                    overflow: hidden;
                }
                .slick-list {
                    gap: @bz-gallery-thumb__gap;
                    flex-direction: var(--gallery-thumbs-direction, row);
                }
                .slick-arrow {
                    transition: opacity var(--transition-duration);
                    top: ~"calc(50% - 12px / 2)";
                }
            }
        }
    }
}
}

.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
    & when (@critical = unsure), (@critical) {
        .breeze-gallery {
            .images {
                overflow: visible;
                flex-wrap: wrap;
                .item {
                    width: ~"calc((100% - (var(--gallery-columns-gap) * var(--gallery-columns-count) - var(--gallery-columns-gap))) / var(--gallery-columns-count))";
                }
            }
        }
    }
}

& when (@media-common = true) {
& when (@critical = unsure), (@critical = false) {
    .breeze-gallery {
        .action.skip {
            position: absolute;
            z-index: 50;
            width: 100%;
            outline-offset: 0;
            background: #fff;
        }
        &.opened .action.skip {
            display: none;
        }
    }
    .breeze-gallery.caption {
        [data-caption]:not([data-caption=""]) {
            &::after {
                content: attr(data-caption);
                position: absolute;
                bottom: 0;
                left: 50%;
                transform: translateX(-50%);
                padding: 1px 5px;
                background: #fff;
            }
        }
    }
    .breeze-gallery.opened {
        top: 0;
        left: 0;
        position: fixed;
        z-index: 999;
        width: 100%;
        height: 100dvh;
        padding: 10px;
        box-sizing: border-box;
        background: #fff;

        .close {
            background: #fff;
            display: block;
            .right(3px);
            top: 3px;
            display: flex;
            align-items: center;
            justify-content: center;
            width: 45px;
            height: 45px;
        }

        .controls {
            visibility: visible;
        }

        .stage {
            flex-grow: 1;
            overflow: hidden !important; // apply previously unset panzoom styles

            &:not(.video) {
                .main-image-wrapper {
                    cursor: default;
                }
            }

            &:has(.main-image-wrapper:focus-visible) {
                .breeze-focus-ring();
            }

            > div:first-child {
                &,
                picture {
                    margin: 0 auto;
                    max-height: 100%;
                }
                &,
                picture,
                .main-image-wrapper {
                    align-items: normal;
                }
                img {
                    object-fit: contain;
                }
            }
        }

        .thumbnails {
            &.hidden {
                display: flex;
            }
        }

        @media (orientation: landscape) {
            .bz-gallery-vertical();

            .stage {
                height: 100%;
                flex-shrink: 1;
            }
            .thumbnails {
                max-height: none !important;
                height: 100%;
                justify-content: flex-start;
            }
        }
    }
}
}

.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
    & when (@critical = unsure), (@critical) {
        .breeze-gallery.vertical:not(.opened) {
            .bz-gallery-vertical();
        }
    }
    & when (@critical = unsure), (@critical = false) {
        .breeze-gallery.opened {
            padding: 30px;
        }
    }
}

